test/parsing/ferguson/reserved-index.good
reserved-index.chpl:1: error: Variable name 'index' is a reserved word
reserved-index.chpl:7: error: Variable name 'index' is a reserved word
reserved-index.chpl:10: error: Variable name 'index' is a reserved word
reserved-index.chpl:15: In function 'test':
reserved-index.chpl:17: error: Variable name 'index' is a reserved word
reserved-index.chpl:20: error: Variable name 'index' is a reserved word
reserved-index.chpl:3: In function 'f':
reserved-index.chpl:3: error: Formal argument name 'index' is a reserved word
reserved-index.chpl:12: error: Function name 'index' is a reserved word
reserved-index.chpl:6: error: Type name 'index' is a reserved word
